@startuml
skinparam minClassWidth 150
package "Input Layer  " {
    class RequestHandler
    class DroneStateMapper

    RequestHandler *-- DroneStateMapper : contains
}

package "Calculation Layer   " {
    class ThrustCalculator
}

package "Output Layer   " {
    class JsonWrapper
    class DictWrapper
}

RequestHandler --> ThrustCalculator
ThrustCalculator --> JsonWrapper
ThrustCalculator --> DictWrapper
caption class diagram
@enduml